--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>To Do List</title>
+<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="container">
-        <h1>To-Do List</h1>
-        <div class="input-section">
-            <input type="text" id="taskInput" placeholder="Add a new task">
-            <button onclick="addTask()">Add Task</button>
-        </div>
-        <ul id="taskList"></ul>
-    </div>
-    <script src="script.js"></script>
+    
+<div class="todo-box">
+<h1>To Do List</h1>
+<div class="input-area">
+<input type="text" id="taskInput" placeholder="Enter your task" />
+<select id="priorityInput">
+<option value="low">Low</option>
+<option value="medium">Medium</option>
+<option value="high">High</option>
+</select>
+<button id="addTask" >Add</button>
+</div>
+<ul id="taskList"></ul>
+<p id="taskCounter">Completed: 0 | Uncompleted: 0</p>
+</div>
+
+<script src="index.js"></script>
 </body>
 </html>
